Fix some spacing issue with lists caused by f41f4a72a54e5a7947142bdba8df28f584415521

--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -27,7 +27,7 @@
     margin-top: 0;
 
     li {
-      margin-bottom: space('smallest') or 1em;
+      margin-bottom: space('smallest') or .2em;
     }
   }
 }
